ingress-certificate/backend-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend  # name of the pods find not the name of the container 
  template:
    metadata:
      labels:
        app: backend  # name of the pod 
    spec:
      containers:
      - name: backend   # name of the container 
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
