ingress-certificate/frontend-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend  # name of the pods find not the name of the container 
  template:
    metadata:
      labels:
        app: frontend # name of the pod 
    spec:
      containers:
      - name: frontend   # name of the container 
        image: httpd
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
