ingress-certificate/ingress-manifest.yml
# this file not start the pod but set the context for the already runnig ingress pod 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  # Pass configuration to controllers 
  #  tells the NGINX ingress controller to rewrite the request path to / before forwarding it to the backend service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
# insted of ingress you can use caddy , trefic , hproxy ... but you  have to use coresponding controller 
  ingressClassName: nginx
  # mapping rules
  rules:
  - host: 100xdevs.com
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80  # port of the service is runnig 
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
